# Hipp0

./: .dockerignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dashboard  PROJECT_STATE.md  README.md  docker-compose.yml  generate_playground.py  install.sh  package-lock.json  package.json  pnpm-lock.yaml  test-5-features.sh
.claude/skills/coding-workflow/: SKILL.md
.claude/skills/pr-description/: SKILL.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: brand-check.yml  ci.yml  release.yml
benchmarks/: README.md  runner.ts
benchmarks/config/: scoring-params.json  synonyms.json
benchmarks/datasets/: role-retrieval.json  token-efficiency.json
benchmarks/results/: latest.md
docs/: MIGRATION.md  TROUBLESHOOTING.md  agent-protocol.md  api-reference.md  architecture.md  cli.md  comparison.md  getting-started.md  github-integration.md  mcp-setup.md  openapi.json  quickstart.md  self-hosting.md  storage.md
docs/framework-guides/: autogen.md  crewai.md  langgraph.md  openai-agents.md
integrations/autogen/: pyproject.toml
integrations/autogen/nexus_autogen/: __init__.py  memory.py
integrations/crewai/: pyproject.toml
integrations/crewai/nexus_crewai/: __init__.py  callback.py  memory.py
integrations/langchain/: pyproject.toml
integrations/langchain/hipp0_langchain/: checkpointer.py
integrations/langchain/nexus_langchain/: __init__.py  callback.py  checkpointer.py  memory.py
integrations/openai-agents/: pyproject.toml
integrations/openai-agents/nexus_openai_agents/: __init__.py  hooks.py
python-sdk/: README.md  pyproject.toml
python-sdk/decigraph_memory/: __init__.py  server.py
python-sdk/decigraph_sdk/: __init__.py  client.py
python-sdk/hipp0_memory/: __init__.py  server.py
python-sdk/nexus_memory/: __init__.py  cli.py  server.py
python-sdk/nexus_sdk/: __init__.py  client.py  exceptions.py  types.py
scripts/: backup.sh  deploy.sh  generate_playground.py  load-test.sh  phase-a-validation.ts  seed-demo.ts  seed_decisions.py  smoke-test.sh
supabase/migrations/: 001_initial_schema.sql  002_audit_log.sql  003_relevance_feedback.sql  004_auto_discovery.sql  005_webhooks.sql  016_api_key_management.sql  016_decision_links.sql  016_governance_runtime.sql  050_cost_tracking.sql
