[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "nexus-langchain"
version = "0.1.0"
description = "LangChain / LangGraph integration for the Nexus multi-agent memory platform."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Perlantir" }]
keywords = ["nexus", "langchain", "langgraph", "memory", "multi-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "nexus-sdk>=0.1.0",
    "langchain-core>=0.3.0",
]

[project.optional-dependencies]
langgraph = ["langgraph>=0.2.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "responses>=0.23",
    "mypy>=1.0",
    "ruff>=0.4",
    "langgraph>=0.2.0",
]

[project.urls]
Homepage = "https://github.com/nexus-platform/nexus"
Documentation = "https://docs.nexus.dev"

[tool.setuptools.packages.find]
where = ["."]
include = ["nexus_langchain*"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"
